tests/toylang/pos/000037_cdrc2.toylang
program a = { a = a == a == (a); } .
