tests/toylang/neg/000741_mutation.toylang
program a = { a = int a; } .
